fix: fix light dark mode

--- a/front/src/App.css
+++ b/front/src/App.css
@@ -10,12 +10,12 @@ body.light-mode {
   color: #000000;
 }
 
-a.light-mode {
-  color: black;
+.text-dark-mode {
+  color: white !important;
 }
 
-a.dark-mode {
-  color: white;
+.text-light-mode {
+  color: black !important;
 }
 
 /* Dark mode styles */
